# serializer version: 1
# name: test_set_value
  [mqtt >]
  00000000  10 29 00 04 4d 51 54 54 05 c2 00 46 00 00 00 00  |.)..MQTT...F....|
  00000010  08 31 39 36 34 38 66 39 34 00 10 32 33 34 36 37  |.19648f94..23467|
  00000020  38 65 61 38 35 34 66 31 39 39 65                 |8ea854f199e|
  [mqtt <]
  00000000  20 09 02 00 06 22 00 0a 21 00 14                 | ...."..!..|
  [mqtt >]
  00000000  82 26 00 01 00 00 20 72 72 2f 6d 2f 6f 2f 75 73  |.&.... rr/m/o/us|
  00000010  65 72 31 32 33 2f 31 39 36 34 38 66 39 34 2f 7a  |er123/19648f94/z|
  00000020  65 6f 5f 64 75 69 64 00                          |eo_duid.|
  [mqtt <]
  00000000  90 04 00 01 00 00                                |......|
  [mqtt >]
  00000000  30 5a 00 20 72 72 2f 6d 2f 69 2f 75 73 65 72 31  |0Z. rr/m/i/user1|
  00000010  32 33 2f 31 39 36 34 38 66 39 34 2f 7a 65 6f 5f  |23/19648f94/zeo_|
  00000020  64 75 69 64 00 41 30 31 00 00 23 83 00 00 23 84  |duid.A01..#...#.|
  00000030  68 a6 a2 24 00 65 00 20 f9 aa 42 d2 e9 30 a6 1f  |h..$.e. ..B..0..|
  00000040  66 5d 13 70 04 70 52 bd ee 69 ef 0b 80 da 71 27  |f].p.pR..i....q'|
  00000050  20 2c 1d d3 a7 eb 86 cf 8a ea fc 5d              | ,.........]|
  [mqtt <]
  00000000  30 54 00 26 72 72 2f 6d 2f 6f 2f 75 73 65 72 31  |0T.&rr/m/o/user1|
  00000010  32 33 2f 31 39 36 34 38 66 39 34 2f 70 72 6f 64  |23/19648f94/prod|
  00000020  75 63 74 2d 69 64 2d 31 32 33 00 00 00 00 27 41  |uct-id-123....'A|
  00000030  30 31 00 00 07 e4 00 00 23 82 68 a6 a2 23 00 66  |01......#.h..#.f|
  00000040  00 10 42 e8 32 ab f4 52 72 fc dd 5f dd 10 38 b3  |..B.2..Rr.._..8.|
  00000050  81 9a 59 ae fe 75                                |..Y..u|
# ---
# name: test_update_dyad_values[RoborockCategory.WET_DRY_VAC]
  [mqtt >]
  00000000  10 29 00 04 4d 51 54 54 05 c2 00 46 00 00 00 00  |.)..MQTT...F....|
  00000010  08 31 39 36 34 38 66 39 34 00 10 32 33 34 36 37  |.19648f94..23467|
  00000020  38 65 61 38 35 34 66 31 39 39 65                 |8ea854f199e|
  [mqtt <]
  00000000  20 09 02 00 06 22 00 0a 21 00 14                 | ...."..!..|
  [mqtt >]
  00000000  82 26 00 01 00 00 20 72 72 2f 6d 2f 6f 2f 75 73  |.&.... rr/m/o/us|
  00000010  65 72 31 32 33 2f 31 39 36 34 38 66 39 34 2f 7a  |er123/19648f94/z|
  00000020  65 6f 5f 64 75 69 64 00                          |eo_duid.|
  [mqtt <]
  00000000  90 04 00 01 00 00                                |......|
  [mqtt >]
  00000000  30 6a 00 20 72 72 2f 6d 2f 69 2f 75 73 65 72 31  |0j. rr/m/i/user1|
  00000010  32 33 2f 31 39 36 34 38 66 39 34 2f 7a 65 6f 5f  |23/19648f94/zeo_|
  00000020  64 75 69 64 00 41 30 31 00 00 23 83 00 00 23 84  |duid.A01..#...#.|
  00000030  68 a6 a2 24 00 65 00 30 98 95 d5 a6 cf 72 88 cd  |h..$.e.0.....r..|
  00000040  01 b2 ed aa 7d ec f1 18 a8 67 c1 45 ac ae 01 f3  |....}....g.E....|
  00000050  50 d6 92 99 26 a0 8b ea 2d 45 5a 20 2d a7 e6 53  |P...&...-EZ -..S|
  00000060  49 1e 03 58 85 5f e7 1f 15 84 c9 bb              |I..X._......|
  [mqtt <]
  00000000  30 84 01 00 26 72 72 2f 6d 2f 6f 2f 75 73 65 72  |0...&rr/m/o/user|
  00000010  31 32 33 2f 31 39 36 34 38 66 39 34 2f 70 72 6f  |123/19648f94/pro|
  00000020  64 75 63 74 2d 69 64 2d 31 32 33 00 00 00 00 57  |duct-id-123....W|
  00000030  41 30 31 00 00 07 e4 00 00 23 82 68 a6 a2 23 00  |A01......#.h..#.|
  00000040  66 00 40 66 89 8b 44 6a aa 4f b5 54 f6 b7 fa 5f  |f.@f..Dj.O.T..._|
  00000050  31 ad 89 d9 89 27 ad 88 80 47 58 9e 02 f2 1f 2f  |1....'...GX..../|
  00000060  1a 4c 17 a2 b8 9f 0a 15 2f 98 1f 43 1f 0b e4 0b  |.L....../..C....|
  00000070  39 27 0b 3b ba 1b 54 c5 cb 77 64 c4 70 b3 d5 53  |9'.;..T..wd.p..S|
  00000080  9e 38 19 02 d9 45 de                             |.8...E.|
# ---
# name: test_update_zeo_values
  [mqtt >]
  00000000  10 29 00 04 4d 51 54 54 05 c2 00 46 00 00 00 00  |.)..MQTT...F....|
  00000010  08 31 39 36 34 38 66 39 34 00 10 32 33 34 36 37  |.19648f94..23467|
  00000020  38 65 61 38 35 34 66 31 39 39 65                 |8ea854f199e|
  [mqtt <]
  00000000  20 09 02 00 06 22 00 0a 21 00 14                 | ...."..!..|
  [mqtt >]
  00000000  82 26 00 01 00 00 20 72 72 2f 6d 2f 6f 2f 75 73  |.&.... rr/m/o/us|
  00000010  65 72 31 32 33 2f 31 39 36 34 38 66 39 34 2f 7a  |er123/19648f94/z|
  00000020  65 6f 5f 64 75 69 64 00                          |eo_duid.|
  [mqtt <]
  00000000  90 04 00 01 00 00                                |......|
  [mqtt >]
  00000000  30 7a 00 20 72 72 2f 6d 2f 69 2f 75 73 65 72 31  |0z. rr/m/i/user1|
  00000010  32 33 2f 31 39 36 34 38 66 39 34 2f 7a 65 6f 5f  |23/19648f94/zeo_|
  00000020  64 75 69 64 00 41 30 31 00 00 23 83 00 00 23 84  |duid.A01..#...#.|
  00000030  68 a6 a2 24 00 65 00 40 98 95 d5 a6 cf 72 88 cd  |h..$.e.@.....r..|
  00000040  01 b2 ed aa 7d ec f1 18 d4 e8 96 71 ac f4 b4 c1  |....}......q....|
  00000050  38 a2 33 5e ae 50 95 79 7f 33 cc 48 d0 d0 af d7  |8.3^.P.y.3.H....|
  00000060  cb d9 bd 20 65 23 e9 e6 ef e0 60 f4 a8 2b 7d 45  |... e#....`..+}E|
  00000070  6d a5 2c 4f d1 87 9a e2 eb c4 26 3a              |m.,O......&:|
  [mqtt <]
  00000000  30 94 01 00 26 72 72 2f 6d 2f 6f 2f 75 73 65 72  |0...&rr/m/o/user|
  00000010  31 32 33 2f 31 39 36 34 38 66 39 34 2f 70 72 6f  |123/19648f94/pro|
  00000020  64 75 63 74 2d 69 64 2d 31 32 33 00 00 00 00 67  |duct-id-123....g|
  00000030  41 30 31 00 00 07 e4 00 00 23 82 68 a6 a2 23 00  |A01......#.h..#.|
  00000040  66 00 50 9b a0 34 d0 93 e2 6e 81 e9 1c d4 ee ac  |f.P..4...n......|
  00000050  6c 11 05 74 d8 2d bc d6 86 35 a5 4f 57 fc 25 3b  |l..t.-...5.OW.%;|
  00000060  f8 04 91 9f 50 bc 69 bf bc 01 cd 2a cc 8b c3 95  |....P.i....*....|
  00000070  f0 05 35 12 24 35 79 d2 6e 66 28 17 92 46 a4 9d  |..5.$5y.nf(..F..|
  00000080  d5 8d ed 2e 18 81 15 e6 1b 39 ec f2 58 17 42 13  |.........9..X.B.|
  00000090  d6 58 cd 79 3a d9 68                             |.X.y:.h|
# ---
